--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/*.cdx-image {}*/
+.cdx-image {}
 
 /*.cdx-image .cdx-loader {*/
   /*min-height: 200px;*/
@@ -13,29 +13,29 @@
   vertical-align: bottom;
 }
 
-/*.cdx-image__picture--with-background {*/
-  /*background: #eff2f5;*/
-  /*padding: 10px;*/
-/*}*/
+.cdx-image__picture--with-background {
+  background: #eff2f5;
+  padding: 10px;
+}
 
-/*.cdx-image__picture--with-background img {*/
-  /*display: block;*/
-  /*max-width: 60%;*/
-  /*margin: 0 auto;*/
-/*}*/
+.cdx-image__picture--with-background img {
+  display: block;
+  max-width: 60%;
+  margin: 0 auto;
+}
 
-/*.cdx-image__picture--with-border {*/
-  /*border: 1px solid #e8e8eb;*/
-  /*padding: 1px;*/
-/*}*/
+.cdx-image__picture--with-border {
+  border: 1px solid #e8e8eb;
+  padding: 1px;
+}
 
-/*.cdx-image__picture--stretched img {*/
-  /*max-width: none;*/
-  /*width: 100%;*/
-/*}*/
+.cdx-image__picture--stretched img {
+  max-width: none;
+  width: 100%;
+}
 
 .cdx-image__upload-button {
-  height: 300px;
+  height: 100px;
   background-color: lightblue;
   cursor: pointer;
 }
