Add floating for image #31

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,22 @@
       }
     }
   }
+
+  &--floatToLeft {
+    ^&__image {
+      &-picture {
+        float: left;
+      }
+    }
+  }
+
+  &--floatToRight {
+    ^&__image {
+      &-picture {
+        float: right;
+      }
+    }
+  }
 }
 
 @keyframes image-preloader-spin {
