Move global placeholder styles

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,19 @@
       }
     }
   }
+
+  &__caption {
+    &[contentEditable=true][data-placeholder]:empty::before{
+      content: attr(data-placeholder);
+      color: #707684;
+      font-weight: normal;
+    }
+
+    &[contentEditable=true][data-placeholder]:empty:focus::before {
+      opacity: 0.3;
+    }
+   }
+
   &--empty {
     ^&__image {
       display: none;
