Move global placeholder styles to plugin (#33)
* Move global placeholder styles

* 2.2.1

* Remove placeholder on focus

* Update styles

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,28 @@
       }
     }
   }
+
+  &__caption {
+    &[contentEditable=true][data-placeholder]::before{
+      position: absolute;
+      content: attr(data-placeholder);
+      color: #707684;
+      font-weight: normal;
+      opacity: 0;
+    }
+
+    &[contentEditable=true][data-placeholder]:empty {
+
+      &::before {
+        opacity: 1;
+      }
+
+      &:focus::before {
+         opacity: 0;
+      }
+    }
+   }
+
   &--empty {
     ^&__image {
       display: none;
