--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,28 @@
         display: none;
       }
     }
+
+    margin-bottom: 10px;
+  }
+
+  &__alt {
+    &[contentEditable="true"][data-placeholder]::before {
+      position: absolute;
+      content: attr(data-placeholder);
+      color: #707684;
+      font-weight: normal;
+      display: none;
+    }
+
+    &[contentEditable="true"][data-placeholder]:empty {
+      &::before {
+        display: block;
+      }
+
+      &:focus::before {
+        display: none;
+      }
+    }
   }
 
   &--empty {
@@ -72,6 +94,9 @@
   &--empty,
   &--loading {
     ^&__caption {
+      display: none;
+    }
+    ^&__alt {
       display: none;
     }
   }
