fix issue with caption field height

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
 
   &__caption {
     &[contentEditable="true"][data-placeholder]::before {
-      position: absolute;
+      position: absolute !important;
       content: attr(data-placeholder);
       color: #707684;
       font-weight: normal;
