--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.css";
+
 .image-tool {
   --bg-color: #cdd1e0;
   --front-color: #388ae5;
@@ -43,6 +45,16 @@
     }
   }
 
+  &__cropper-container {
+      height: 300px;
+      overflow: scroll;
+   }
+
+  &__cropper-canvas-btn {
+      width: 100%;
+      height: 30px;
+  }
+
   &__caption {
     &[contentEditable="true"][data-placeholder]::before {
       position: absolute !important;
@@ -74,6 +86,10 @@
     ^&__caption {
       display: none;
     }
+
+    ^&__cropper {
+      display: none;
+    }
   }
 
   &--filled {
@@ -85,6 +101,24 @@
       &-preloader {
         display: none;
       }
+    }
+
+    ^&__cropper {
+      display: none;
+    }
+  }
+
+  &--cropping {
+    ^&__caption {
+      display: none
+    }
+
+    ^&__image-preloader {
+      display: none
+    }
+
+    .cdx-button {
+      display: none;
     }
   }
 
@@ -101,6 +135,10 @@
     }
 
     .cdx-button {
+      display: none;
+    }
+
+    ^&__cropper {
       display: none;
     }
   }
