Add new field to add link url to image

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,28 @@
     }
   }
 
+  &__link-url {
+    margin-top: 10px;
+
+    &[contentEditable="true"][data-placeholder]::before {
+      position: absolute !important;
+      content: attr(data-placeholder);
+      color: #707684;
+      font-weight: normal;
+      display: none;
+    }
+
+    &[contentEditable="true"][data-placeholder]:empty {
+      &::before {
+        display: block;
+      }
+
+      &:focus::before {
+        display: none;
+      }
+    }
+  }
+
   &--empty {
     ^&__image {
       display: none;
@@ -72,6 +94,13 @@
   &--empty,
   &--loading {
     ^&__caption {
+      display: none;
+    }
+  }
+
+  &--empty,
+  &--loading {
+    ^&__linkUrl {
       display: none;
     }
   }
