Add medium-zoom feature and set default image to center

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,12 @@
     border-radius: 3px;
     overflow: hidden;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
 
     &-picture {
       max-width: 100%;
-      vertical-align: bottom;
+      vertical-align: middle;
       display: block;
     }
 
@@ -129,4 +131,9 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+.medium-zoom-overlay,
+.medium-zoom-image--opened {
+  z-index: 999;
 }
