--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     border-radius: 3px;
     overflow: hidden;
     margin-bottom: 10px;
+    cursor: pointer;
 
     &-picture {
       max-width: 100%;
@@ -155,5 +156,39 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+.lightbox-panel {
+  z-index: 1000;
+  display: block;
+  position: fixed;
+  overflow: hidden;
+  top:0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.1);
+  transition: opacity .15s linear;
+  touch-action: pinch-zoom;
+
+  .lightbox-item {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    will-change: transform opacity;
+
+    img {
+      width: auto;
+      height: auto;
+      max-width: 100vw;
+      max-height: 100vh;
+      cursor: pointer;
+    }
   }
 }
