--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@
 
   &__caption {
     display: none;
+    overflow: hidden;
 
     &[contentEditable="true"][data-placeholder]::before {
       position: absolute !important;
@@ -63,6 +64,28 @@
         display: none;
       }
     }
+
+    margin-bottom: 10px;
+  }
+
+  &__alt {
+    overflow: hidden;
+
+    &[contentEditable="true"][data-placeholder]::before {
+      position: absolute;
+      content: attr(data-placeholder);
+      color: #707684;
+      font-weight: normal;
+      display: none;
+    }
+    &[contentEditable="true"][data-placeholder]:empty {
+      &::before {
+        display: block;
+      }
+      &:focus::before {
+        display: none;
+      }
+    }
   }
 
   &--empty {
@@ -74,6 +97,9 @@
   &--empty,
   &--loading {
     ^&__caption {
+      display: none;
+    }
+    ^&__alt {
       display: none;
     }
   }
