Fix issue of toolbar position when block image is empty

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,9 @@
   &--empty,
   &--loading {
     ^&__caption {
-      display: none;
+      /* display: none; */
+      visibility: hidden;
+      position: absolute;
     }
   }
 
